# federated-ueba

./: .gitignore  AGENTS.md  FEDERATED_APPROACH_GUIDE.md  README.md  central_insider_detection.py  citations.txt  clear_results.py  compare_experiments.py  compare_results.py  config_manager.py  experiments.toml  feature_extraction.py  federated_insider_detection.py  federated_insider_results_advanced.csv  federated_ueba_results.csv  insider_detection.py  pyproject.toml  real_tester.py  settings.toml  temporal.py  train_centralized.py
federated_evaluation_reports/: federated_rounds_comparison.csv
federated_evaluation_reports/baseline/: experiment_summary.json  federated_rounds_comparison.csv
federated_evaluation_reports/baseline/round_by_round_results/: round_0_results.csv  (+50 more)
federated_evaluation_reports/round_by_round_results/: round_0_results.csv  round_100_results.csv  round_10_results.csv  round_110_results.csv  round_120_results.csv  round_130_results.csv  round_140_results.csv  round_150_results.csv  round_160_results.csv  round_170_results.csv  round_180_results.csv  round_190_results.csv  round_20_results.csv  round_210_results.csv  round_220_results.csv  round_230_results.csv  round_240_results.csv  round_250_results.csv  round_30_results.csv  round_40_results.csv  round_50_results.csv  round_60_results.csv  round_70_results.csv  round_80_results.csv  round_90_results.csv
federated_evaluation_reports/top-k-0.01/: experiment_summary.json  federated_rounds_comparison.csv
federated_ueba/: client_app.py  efficiency_plugins.py  server_app.py  strategy.py  task.py
(+85 files in other folders)
